# codecov-test

./: .bazelrc  .travis.yml  BUILD.bazel  Dockerfile  WORKSPACE  lib.cpp  lib.hpp  maina.cpp  mainb.cpp  test.sh  testa.sh  testb.sh
