licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "lib",
    hdrs = ["lib.hpp"],
    srcs = ["lib.cpp"],
)

cc_test(
    name = "a",
    srcs = ["maina.cpp"],
    deps = ["//:lib"],
)

cc_test(
    name = "b",
    srcs = ["mainb.cpp"],
    deps = ["//:lib"],
)
